# diff-utils

./: .gitignore  README.md  pyproject.toml  pytest.ini
banded/: _ext.py  acoustic_recurrence.py  eigenvalue_gate.py  eigenvector_gate.py  elastic_propagation.py  interp.py  krakel_gate.py  kraken_ift.py  logdet.py  solve_banded.py  trapezoidal_dot.py
diff_utils/: __init__.py  _cpu_kernels.cpp  _ext.py  acoustic_recurrence.py  acoustic_solver.py  eigenvalue_gate.py  eigenvalue_ift.py  eigenvector_gate.py  eigvec_adjoint.py  elastic_propagation.py  interp.py  krakel_gate.py  krakel_ift.py  kraken_ift.py  logdet.py  mode_coupling.py  range_stepper.py  solve_banded.py  solve_tridiag.py  trapezoidal_dot.py  tridiag_eigh.py  weighted_depth_integral.py
tests/: _test_helpers.py  conftest.py  test_acoustic_nograd.py  test_acoustic_recurrence.py  test_acoustic_solver.py  test_banded_logdet.py  test_eigenvalue_gate.py  test_eigenvalue_ift.py  test_eigenvector_gate.py  test_eigvec_adjoint.py  test_elastic_propagation.py  test_field_primitives.py  test_interp.py  test_krakel_gate.py  test_krakel_ift.py  test_kraken_ift.py  test_kraken_multilayer_ift.py  test_refine_roots_kernel.py  test_regression_algorithms.py  test_solve_banded.py  test_solve_tridiag.py  test_trapezoidal_dot.py  test_tridiag_eigh.py  test_tridiag_eigvec_adjoint.py
