[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-utils"
version = "0.1"
description = "Differentiable kernels for UWA normal-mode solvers"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["banded*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
